scroll on mobile issue fixed

--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -89,7 +89,9 @@ mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
     z-index: 0;
     border: none;
     height: 95%;
-    overflow-x: hidden;
+    display: flex;
+    flex-wrap: nowrap;
+    //overflow-x: hidden;
     clip-path: inset(0 12% 0 0);
     .proto{
       width:22%;
